feat: add fill db null value.
